edit information card and training schedule interface 89%

--- a/navigation/information_card_TS.html
+++ b/navigation/information_card_TS.html
@@ -263,101 +263,159 @@
                             </h1>
                         </div>
                     </div>
-                    <div id="table2" class="table">
-                        <div class="profine__information">
-                            <div class="title__table">
-                                <div class="title__table__group">
-                                    <div class="title__table__group part__one">
-                                        Thông tin hồ sơ
-                                    </div>
-                                    <div class="title__table__group part__two">
-                                        <a class="part__two part__two__information" href="">
-                                            Chỉnh sửa thông tin hồ sơ
-                                        </a>
-                                    </div>
-                                    
+                    <div id="table2" class="table__training__schedule">
+                        <div class="operation__row">
+                            <div class="operation__button">
+                                <div class="registration__button">
+                                    <button id="button1" class="button__in__operation">
+                                        Đăng ký lịch
+                                    </button>
+                                </div>
+                                <div class="cancel__button">
+                                    <button id="button2" class="button__in__operation">
+                                        Huỷ lịch
+                                    </button>
                                 </div>
                             </div>
-                            <div class="border__top">
-                                <div class="rows">
-                                    <div class="rows part__one__and__two">
-                                        <div class="rows part__one">
-                                            <div class="part__one__title">
-                                                Ngày sinh
-                                            </div>
+                            <div class="request">
+                                <div class="request__button">
+                                    <button id="button3" class="button__in__operation">
+                                        <i class='bx bx-list-check' ></i>
+                                        Danh sách yêu cầu
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="training__schedule">
+                            <div class="table">
+                                <div id="training-schedule" class="first__training__schedule">
+                                    <div class="row">
+                                        <div class="row__title">
+                                            Ngày:
                                         </div>
-                                        <div class="rows part__two">
-                                            <div class="part__two__content">
-                                                27/06/2004
-                                            </div>
+                                        <div class="row__content">
+                                            1/3/2024
                                         </div>
                                     </div>
-                                    <div class="rows third__part">
-                                        <div class="third__part__a">
-                                            <div class="third__part__a third__part__a__content">
-                                                Ngày sinh của bạn đã được dùng cho cài đặt an toàn của tài khoản
-                                            </div>
+                                    <div class="row">
+                                        <div class="row__title">
+                                            Thời gian:
                                         </div>
-                                        <div class="third__part__b">
-                                            <div class="third__part__b__ico">
-                                                <i class="fa-solid fa-chevron-right"></i>
-                                            </div>
+                                        <div class="row__content">
+                                            13H10
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="row__title">
+                                            Môn:
+                                        </div>
+                                        <div class="row__content">
+                                            Gym
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="row__title">
+                                            Huấn luyện viên:
+                                        </div>
+                                        <div class="row__content">
+                                            David Truong
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="row__title">
+                                            Ghi chú: 
+                                        </div>
+                                        <div class="row__content">
+                                            Cảm ơn bạn đã chú ý đến chú ý này, sự chú ý 
+                                            của bạn sẽ được chú ý !
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="border__top">
-                                <div class="rows">
-                                    <div class="rows part__one__and__two">
-                                        <div class="rows part__one">
-                                            <div class="part__one__title">
-                                                Quốc gia hoặc khu vực
-                                            </div>
+                            <div class="table">
+                                <div id="training-schedule" class="second__training__schedule">
+                                    <div class="row">
+                                        <div class="row__title">
+                                            Ngày:
                                         </div>
-                                        <div class="rows part__two">
-                                            <div class="part__two__content">
-                                                Việt Nam
-                                            </div>
+                                        <div class="row__content">
+                                            1/3/2024
                                         </div>
                                     </div>
-                                    <div class="rows third__part">
-                                        <div class="third__part__a">
-                                            <div class="third__part__a third__part__a__content">
-                                                Quốc gia và khu vực của bạn đã được sử dụng cho cài đặt về quyền riêng tư
-                                            </div>
+                                    <div class="row">
+                                        <div class="row__title">
+                                            Thời gian:
                                         </div>
-                                        <div class="third__part__b">
-                                            <div class="third__part__b__ico">
-                                                <i class="fa-solid fa-chevron-right"></i>
-                                            </div>
+                                        <div class="row__content">
+                                            13H10
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="row__title">
+                                            Môn:
+                                        </div>
+                                        <div class="row__content">
+                                            Gym
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="row__title">
+                                            Huấn luyện viên:
+                                        </div>
+                                        <div class="row__content">
+                                            David Truong
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="row__title">
+                                            Ghi chú:
+                                        </div>
+                                        <div class="row__content">
+                                            không có gì đâu mà đọc
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="border__top">
-                                <div class="rows">
-                                    <div class="rows part__one__and__two">
-                                        <div class="rows part__one">
-                                            <div class="part__one__title">
-                                                Ngôn ngữ
-                                            </div>
+                            <div class="table">
+                                <div id="training-schedule" class="third__training__schedule">
+                                    <div class="row">
+                                        <div class="row__title">
+                                            Ngày:
                                         </div>
-                                        <div class="rows part__two">
-                                            <div class="part__two__content">
-                                                Tiếng Việt (Việt Nam)
-                                            </div>
+                                        <div class="row__content">
+                                            1/3/2024
                                         </div>
                                     </div>
-                                    <div class="rows third__part">
-                                        <div class="third__part__a">
-                                            <div class="third__part__a third__part__a__content">
-                                                Hỏi trước khi dịch
-                                            </div>
+                                    <div class="row">
+                                        <div class="row__title">
+                                            Thời gian:
                                         </div>
-                                        <div class="third__part__b">
-                                            <div class="third__part__b__ico">
-                                                <i class="fa-solid fa-chevron-right"></i>
-                                            </div>
+                                        <div class="row__content">
+                                            13H10
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="row__title">
+                                            Môn:
+                                        </div>
+                                        <div class="row__content">
+                                            Gym
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="row__title">
+                                            Huấn luyện viên:
+                                        </div>
+                                        <div class="row__content">
+                                            David Truong
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="row__title">
+                                            Ghi chú:
+                                        </div>
+                                        <div class="row__content">
+                                            ở trên kia đã ghi là không có gì rồi mà, đọc tiếp làm gì.
                                         </div>
                                     </div>
                                 </div>
