add form registration in information card and training schedule

--- a/navigation/information_card_TS.html
+++ b/navigation/information_card_TS.html
@@ -270,6 +270,69 @@
                                     <button id="button1" class="button__in__operation">
                                         Đăng ký lịch
                                     </button>
+                                    <div id="form" class="form1">
+                                        <div class="registration__traning__schedule">
+                                            <div class="table">
+                                                <div id="training-schedule" class="first__training__schedule">
+                                                    <div class="row__title__table">
+                                                        <div class="row__title__table__content">
+                                                            Đăng ký lịch
+                                                        </div>
+                                                        <div class="x__cancel">
+                                                            <i class="fa-regular fa-circle-xmark"></i>
+                                                        </div>
+                                                    </div>
+                                                    <div class="row">
+                                                        <div class="row__title">
+                                                            Ngày:
+                                                        </div>
+                                                        <div class="row__content">
+                                                            Chọn ngày
+                                                        </div>
+                                                    </div>
+                                                    <div class="row">
+                                                        <div class="row__title">
+                                                            Thời gian:
+                                                        </div>
+                                                        <div class="row__content">
+                                                            Chọn thời gian
+                                                        </div>
+                                                    </div>
+                                                    <div class="row">
+                                                        <div class="row__title">
+                                                            Môn:
+                                                        </div>
+                                                        <div class="row__content">
+                                                            Chọn bài tập
+                                                        </div>
+                                                    </div>
+                                                    <div class="row">
+                                                        <div class="row__title">
+                                                            Huấn luyện viên:
+                                                        </div>
+                                                        <div class="row__content">
+                                                            Ngẫu nhiên
+                                                        </div>
+                                                    </div>
+                                                    <div class="row">
+                                                        <div class="row__title">
+                                                            Ghi chú: 
+                                                        </div>
+                                                        <div class="row__content">
+                                                            Nhấp để thêm ghi chú
+                                                        </div>
+                                                    </div>
+                                                    <div class="row__final">
+                                                        <div class="row__final__button">
+                                                            <button class="button__form">
+                                                                Gửi yêu cầu
+                                                            </button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="cancel__button">
                                     <button id="button2" class="button__in__operation">
