--- a/navigation/information_card_TS.html
+++ b/navigation/information_card_TS.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" href="../img/icon/logo.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -275,7 +276,7 @@
                                             <div class="table">
                                                 <div id="training-schedule" class="first__training__schedule">
                                                     <div class="row__title__table">
-                                                        <div class="row__title__table__content">
+                                                        <div class="row__title__table">
                                                             Đăng ký lịch
                                                         </div>
                                                         <div class="x__cancel">
