fix interface information card and training schedule

--- a/navigation/information_card_TS.html
+++ b/navigation/information_card_TS.html
@@ -276,7 +276,7 @@
                                             <div class="table">
                                                 <div id="training-schedule" class="first__training__schedule">
                                                     <div class="row__title__table">
-                                                        <div class="row__title__table">
+                                                        <div class="row__title__table__content">
                                                             Đăng ký lịch
                                                         </div>
                                                         <div class="x__cancel">
