--- a/navigation/information_account.html
+++ b/navigation/information_account.html
@@ -141,7 +141,7 @@
                                 <i class="fa-solid fa-key"></i>
                             </a>
                             <ul class="change__the__password__group">
-                                <a href="" class="change__the__password__group change__the__password__group__content">
+                                <a class="change__the__password__group change__the__password__group__content">
                                     Thay đổi mật khẩu
                                 </a>
                                 <a href=""
