--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
             
             <div class="modal__body__box register-cart">
                 <!-- <p>Đăng nhập tài khoản</p> -->
-                <form>
+                <div>
                     <div class="user-box">
                         <input class="login-email" required="" name="" type="text">
                         <label>Họ và tên</label>
@@ -663,7 +663,7 @@
                         <span></span>
                         Đăng ký
                     </button>
-                </form>
+                </div>
             </div>
         </div>
     </div>
