--- a/navigation/chatbox.html
+++ b/navigation/chatbox.html
@@ -45,32 +45,25 @@
                 <!-- Thanh dieu huong -->
                 <div class="header__inner__navigation">
                     <ul>
-                        <li><a class="header__inner__navigation__sevice" href="../index.html">TRANG CHỦ</a>
-                        </li>
-                        <li><a class="header__inner__navigation__sevice" href="../navigation/forum.html">DIỄN ĐÀN</a>
-                        </li>
+                        <li><a class="header__inner__navigation__sevice" href="../index.html">TRANG CHỦ</a></li>
+                        <li><a class="header__inner__navigation__sevice" href="./card.html">THẺ HỘI VIÊN</a></li>
                         <li>
                             <div class="dropdown">
                                 <a class="header__inner__navigation__sevice" href="#" onclick="yourFunction(event)">
-                                    <span>DỊCH VỤ</span>
-                                    <m><i class='bx bxs-right-arrow'></i></m>
+                                    DỊCH VỤ<m><i class='bx bxs-right-arrow'></i></m>
                                 </a>
                                 <div class="containt">
-                                    <a href="../navigation/card.html">THẺ HỘI VIÊN</a>
-                                    <a href="../navigation/train.html">HUẤN LUYỆN VIÊN</a>
-                                    <a href="../navigation/shop.html">CỬA HÀNG WHEY</a>
-                                    <a href="../navigation/chatbox.html"><span>CHAT ONLINE</span></a>
-                                    <a href="../navigation/test.html">TEST</a>
-                                </div>
+                                    <a href="./train.html">HUẤN LUYỆN VIÊN</a>
+                                    <a href="./shop.html">CỬA HÀNG WHEY</a>
+                              </div>
                             </div>
                         </li>
-                        <li><a class="header__inner__navigation__sevice" href="../navigation/promotion.html">KHUYẾN
-                                MÃI</a></li>
+                        <li><a class="header__inner__navigation__sevice" href="./chatbox.html">CHAT ONLINE</a></li>
                     </ul>
                 </div>
                 <div class="header__inner__try">
                     <ul>
-                        <li><a href="https://facebook.com/lst24">TẬP THỬ MIỄN PHÍ</a></li>
+                        <li><a href="./promotion.html">KHUYẾN MÃI</a></li>
                     </ul>
                 </div>
                 <div class="header__inner__login">
