--- a/navigation/card.html
+++ b/navigation/card.html
@@ -38,31 +38,25 @@
                 <!-- Thanh dieu huong -->
                 <div class="header__inner__navigation">
                     <ul>
-                        <li><a class="header__inner__navigation__sevice" href="../index.html"><span>TRANG CHỦ</span></a>
-                        </li>
-                        <li><a class="header__inner__navigation__sevice" href="./navigation/forum.html">DIỄN ĐÀN</a>
-                        </li>
+                        <li><a class="header__inner__navigation__sevice" href="../index.html">TRANG CHỦ</a></li>
+                        <li><a class="header__inner__navigation__sevice" href="./card.html">THẺ HỘI VIÊN</a></li>
                         <li>
                             <div class="dropdown">
                                 <a class="header__inner__navigation__sevice" href="#" onclick="yourFunction(event)">
                                     DỊCH VỤ<m><i class='bx bxs-right-arrow'></i></m>
                                 </a>
                                 <div class="containt">
-                                    <a href="./card.html">THẺ HỘI VIÊN</a>
                                     <a href="./train.html">HUẤN LUYỆN VIÊN</a>
                                     <a href="./shop.html">CỬA HÀNG WHEY</a>
-                                    <a href="./chatbox.html">CHAT ONLINE</a>
-                                    <a href="./test.html">TEST</a>
-                                </div>
+                              </div>
                             </div>
                         </li>
-                        <li><a class="header__inner__navigation__sevice" href="./navigation/promotion.html">KHUYẾN
-                                MÃI</a></li>
+                        <li><a class="header__inner__navigation__sevice" href="./chatbox.html">CHAT ONLINE</a></li>
                     </ul>
                 </div>
                 <div class="header__inner__try">
                     <ul>
-                        <li><a href="https://facebook.com/lst24">TẬP THỬ MIỄN PHÍ</a></li>
+                        <li><a href="./promotion.html">KHUYẾN MÃI</a></li>
                     </ul>
                 </div>
                 <div class="header__inner__login">
