--- a/navigation/information_account.html
+++ b/navigation/information_account.html
@@ -40,7 +40,7 @@
                 <div class="header__inner__navigation">
                     <ul>
                         <li><a class="header__inner__navigation__sevice" href="../index.html">TRANG CHỦ</a></li>
-                        <li><a class="header__inner__navigation__sevice" href="./card.html">THẺ HỘI VIÊN</a></li>
+                        <li><a class="header__inner__navigation__sevice" href="./card.html">CHAT ONLINE</a></li>
                         <li>
                             <div class="dropdown">
                                 <a class="header__inner__navigation__sevice" href="#" onclick="yourFunction(event)">
@@ -52,12 +52,12 @@
                               </div>
                             </div>
                         </li>
-                        <li><a class="header__inner__navigation__sevice" href="./chatbox.html">CHAT ONLINE</a></li>
+                        <li><a class="header__inner__navigation__sevice" href="./chatbox.html">THẺ HỘI VIÊN</a></li>
                     </ul>
                 </div>
                 <div class="header__inner__try">
                     <ul>
-                        <li><a href="./promotion.html">KHUYẾN MÃI</a></li>
+                        <li><a href="./promotion.html">KHUYẾN MÃI NÈ</a></li>
                     </ul>
                 </div>
                 <div class="header__inner__menu">
@@ -337,7 +337,6 @@
                                             Chỉnh sửa thông tin tài khoản
                                         </span>
                                     </div>
-
                                 </div>
                             </div>
                             <div class="border__top">
@@ -395,6 +394,51 @@
                                         <div class="third__part__b">
                                             <div class="third__part__b__ico">
                                                 <i class="fa-solid fa-chevron-right"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="table3" class="table">
+                        <div class="account__information">
+                            <div class="title__table">
+                                <div class="title__table__group">
+                                    <div class="title__table__group part__one">
+                                        Thông tin thẻ thành viên
+                                    </div>
+                                    <div class="title__table__group part__two">
+                                        <span id="change-information" class="part__two part__two__information" href="">
+                                            Xem tại đây
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="border__top">
+                                <div class="rows">
+                                    <div class="rows part__one__and__two">
+                                        <div class="rows part__one">
+                                            <div class="part__one__title">
+                                                ...
+                                            </div>
+                                        </div>
+                                        <div class="rows part__two">
+                                            <div id="email-client" class="part__two__content">
+                                                <!-- truong@gmail.com -->
+                                                .....
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="rows third__part">
+                                        <div class="third__part__a">
+                                            <div class="third__part__a third__part__a__content">
+                                                
+                                            </div>
+                                        </div>
+                                        <div class="third__part__b">
+                                            <div class="third__part__b__ico">
+                                                
                                             </div>
                                         </div>
                                     </div>
