--- a/navigation/shop.html
+++ b/navigation/shop.html
@@ -47,7 +47,7 @@
                 <div class="header__inner__navigation">
                     <ul>
                         <li><a class="header__inner__navigation__sevice" href="../index.html">TRANG CHỦ</a></li>
-                        <li><a class="header__inner__navigation__sevice" href="./card.html">THẺ HỘI VIÊN</a></li>
+                        <li><a class="header__inner__navigation__sevice" href="./card.html">CHAT ONLINE</a></li>
                         <li>
                             <div class="dropdown">
                                 <a class="header__inner__navigation__sevice" href="#" onclick="yourFunction(event)">
@@ -59,12 +59,12 @@
                               </div>
                             </div>
                         </li>
-                        <li><a class="header__inner__navigation__sevice" href="./chatbox.html">CHAT ONLINE</a></li>
+                        <li><a class="header__inner__navigation__sevice" href="./chatbox.html">THẺ HỘI VIÊN</a></li>
                     </ul>
                 </div>
                 <div class="header__inner__try">
                     <ul>
-                        <li><a href="./promotion.html">KHUYẾN MÃI</a></li>
+                        <li><a href="./promotion.html">KHUYẾN MÃI NÈ</a></li>
                     </ul>
                 </div>
                 <div class="header__inner__menu">
