add more information

--- a/navigation/information_account.html
+++ b/navigation/information_account.html
@@ -409,8 +409,10 @@
                                         Thông tin thẻ thành viên
                                     </div>
                                     <div class="title__table__group part__two">
-                                        <span id="change-information" class="part__two part__two__information" href="">
-                                            Xem tại đây
+                                        <span id="change-information" class="part__two part__two__information">
+                                            <a class="more__information" href="../navigation/information_card_TS.html">
+                                                Xem tại đây
+                                            </a>
                                         </span>
                                     </div>
                                 </div>
@@ -420,13 +422,13 @@
                                     <div class="rows part__one__and__two">
                                         <div class="rows part__one">
                                             <div class="part__one__title">
-                                                ...
+                                                ....
                                             </div>
                                         </div>
                                         <div class="rows part__two">
                                             <div id="email-client" class="part__two__content">
                                                 <!-- truong@gmail.com -->
-                                                .....
+                                                ...
                                             </div>
                                         </div>
                                     </div>
