--- a/navigation/card.html
+++ b/navigation/card.html
@@ -439,7 +439,7 @@
             </div>
             <div class="modal__body__box login-box">
                 <p>Đăng nhập tài khoản</p>
-                <form>
+                <div>
                     <div class="user-box">
                         <input class="login-email" required="" name="" type="text">
                         <label>Email</label>
@@ -455,12 +455,12 @@
                         <span></span>
                         Đăng nhập
                     </button>
-                </form>
+                </div>
                 <p>Chưa có tài khoản? <span class="a2 link-create-account">Đăng ký!</span></p>
             </div>
             <div class="modal__body__box create-account-box">
                 <p>Đăng nhập tài khoản</p>
-                <form>
+                <div>
                     <div class="user-box">
                         <input class="login-name" required="" name="" type="text">
                         <label>Họ và tên</label>
@@ -484,12 +484,12 @@
                         <span></span>
                         Đăng ký
                     </button>
-                </form>
+                </div>
                 <p>Đã có tài khoản? <span class="a2 link-login">Đăng nhập!</span></p>
             </div>
 
             <div class="modal__body__box register-cart">
-                <form>
+                <div>
                     <div class="user-box createBox">
                         <input class="phoneNumber" required="" name="" type="text">
                         <label>Số điện thoại</label>
@@ -575,7 +575,7 @@
                         <span></span>
                         Đăng ký tập
                     </button>
-                </form>
+                </div>
             </div>
         </div>
     </div>
