done login on index file

--- a/index.html
+++ b/index.html
@@ -54,10 +54,7 @@
                                 <div class="containt">
                                     <a href="./navigation/train.html">HUẤN LUYỆN VIÊN</a>
                                     <a href="./navigation/shop.html">CỬA HÀNG WHEY</a>
-<<<<<<< HEAD
                                     <a href="./navigation/chatbox.html">CHAT ONLINE</a>
-=======
->>>>>>> 2ac20da1e1cc59067fba8c12bd43aad9f821ce53
                                 </div>
                             </div>
                         </li>
@@ -103,15 +100,15 @@
                             <div class="logo">
                                 <ul class="account__login__center">
                                     <li class="account__login">
-                                        <a class="account__login__inner" href="">
+                                        <a class="account__login__inner">
                                         </a>
                                     </li>
                                 </ul>
                                 <div class="account__about">
-                                    <a class="account__name" href="#">
+                                    <a class="account__name">
                                         USERNAME
                                     </a>
-                                    <a class="account__code" href="#">
+                                    <a class="account__code">
                                         GYMZ001
                                     </a>
                                 </div>
@@ -157,12 +154,15 @@
                                     KHUYẾN MÃI
                                 </span>
                             </a>
-                            <a class="content__inner" href="#">
-                                <i class='bx bx-code-alt'></i>
-                                <span class="noidung__text1">
-                                    TẬP THỬ MIỄN PHÍ
-                                </span>
-                            </a>
+                            <div class="content__logout">
+                                <a class="content__logout__btn content__inner">
+                                    <!-- <i class='bx bx-code-alt'></i> -->
+                                    <i class="bxf fa-solid fa-right-from-bracket"></i>
+                                    <span class="noidung__text1">
+                                        ĐĂNG XUẤT
+                                    </span>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
