--- a/navigation/admin.html
+++ b/navigation/admin.html
@@ -215,11 +215,9 @@
                                 </div>
                                 <div class="chatbox__message">
                                     <ul class="chatbox__message__list">
-                                        <li class="chatbox__message__item chatbox__message__item__left">
-                                            <span class="chatbox__message__item__text">
-                                                Em chào anh/chị Em có thể giúp gì được anh chị ạ!
-                                            </span>
-                                        </li>
+                                        <!-- <li class="chatbox__message__item chatbox__message__item__left">
+                                            <span class="chatbox__message__item__text"> </span>
+                                        </li> -->
                                     </ul>
                                 </div>
                                 <div class="chatbox__bottom">
