--- a/navigation/informationItem.html
+++ b/navigation/informationItem.html
@@ -529,8 +529,8 @@
         </div>
     </div>
 
-
     <!-- <script src="./index.js"></script> -->
+    <script type="module" src="../navigation_javascript/loadData.js"></script>
     <script src="../navigation_javascript/menuv2.js"></script>
     <script src="../navigation_javascript/informationItem.js" type="text/babel"></script>
 
