--- a/navigation/information_account.html
+++ b/navigation/information_account.html
@@ -585,6 +585,7 @@
         </div>
     </div>
     <div class="nen_mo"></div>
+    <script type="module" src="../navigation_javascript/loadData.js"></script>
     <script type="module" src="../navigation_javascript/toast.js"></script>
     <script src="../navigation_javascript/menuv2.js"></script>
     <script type="module" src="../navigation_javascript/information_account.js"></script>
