--- a/navigation/information_card_TS.html
+++ b/navigation/information_card_TS.html
@@ -694,6 +694,7 @@
     <div id="toast"></div>
         <!-- overlay -->
     <div class="nen_mo"></div>
+    <script type="module" src="../navigation_javascript/loadData.js"></script>
     <script src="../navigation_javascript/menuv2.js"></script>
     <script src="../navigation_javascript/terms_of_use.js"></script>
     <script type="module" src="../navigation_javascript/toast.js"></script>
