--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -590,8 +590,9 @@
         </div>
     </div>
     <!-- <script src="./index.js"></script> -->
+    <script type="module" src="../navigation_javascript/loadData.js"></script>
     <script src="../navigation_javascript/menuv2.js"></script>
-    <script src="../navigation_javascript/promotion.js"></script>
+    <script type="module" src="../navigation_javascript/promotion.js"></script>
     <!-- <script src="../navigation_javascript/menu.js"></script> -->
 </body>
 
