--- a/navigation/shop.html
+++ b/navigation/shop.html
@@ -418,8 +418,9 @@
     <!-- overlay -->
     <div class="nen_mo"></div>
     <!-- <script src="../index.js"></script> -->
+    <script type="module" src="../navigation_javascript/loadData.js"></script>
     <script src="../navigation_javascript/menuv2.js"></script>
-    <script  src="../navigation_javascript/shop.js" type="text/babel"></script>
+    <script src="../navigation_javascript/shop.js" type="text/babel"></script>
 </body>
 
 </html>
