--- a/navigation/train.html
+++ b/navigation/train.html
@@ -393,8 +393,10 @@
     </div>
     <!-- overlay -->
     <div class="nen_mo"></div>
-    <script src="./index.js"></script>
+    <script type="module" src="../navigation_javascript/loadData.js"></script>
+    <!-- <script src="./index.js"></script> -->
     <script src="../navigation_javascript/menuv2.js"></script>
+    <script type="module" src="../navigation_javascript/train.js"></script>
 </body>
 
 </html>
