--- a/index.html
+++ b/index.html
@@ -673,10 +673,12 @@
         <div id="caption"></div>
     </div>
     
+
     <div class="nen_mo"></div>
+    <script type="module" src="./navigation_javascript/loadData.js"></script>
     <script type="module" src="./navigation_javascript/toast.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="./index.js"></script>
+    <script type="module" src="./index.js"></script>
     <script src="./navigation_javascript/menuv2.js"></script>
     <script type="module" src="./navigation_javascript/login.js"></script>
 </body>
